[package]
name = "fw"
version = "0.2.0"
authors = ["Andraz Tori <atori@outbrain.com>"]
description = "Like Vowpal Wabbit, but meaner"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
# we need new version to enable static builds
fasthash = "0.4.0"
# fasthash = { git = "https://github.com/flier/rust-fasthash", rev="6ca68b93f7" }
# fasthash = { git = "https://github.com/flier/rust-fasthash", rev="ef0c52b4157af9a1a7d19b2a37658b6c26a6bea6" }
serde = {version = "1.0.114" , features = ["derive"]}
serde_json = "1.0.55"
#fastapprox = "0.3.0"
clap = "2.33.1"
byteorder = "1.3.4"
#backtrace = "0.3.46"
#triomphe = "0.1.1"
merand48 = "0.1.0"
daemonize = "0.4.1"
lz4 = "1.23.2"
nom = "7"
dyn-clone = "1.0"
#funty="=1.1.0"	# no need for pinning any more
rand = "0.8.5"
rand_distr = "0.4.3"
#rand_core = "0.4.2"
rand_xoshiro = "0.6.0"
# We'll use cloudflare's zlib as it is the fastest game in town
#flate2 = "1.0" #minz library
#flate2 = { version = "1.0", features = ["zlib"], default-features = false }
flate2 = { version = "1.0", features = ["cloudflare_zlib"], default-features = false }

#blas-src = { version = "0.8", features = ["intel-mkl"] }
#openblas-src = {version = "0.10.4", features = ["static"]}
#cblas = "0.4.0"
#intel-mkl-src = {version= "0.7.0", default-features = false, features=["download", "mkl-static-lp64-seq"]}
#blas-src = "0.8.0"
#blas = "0.22"
#openblas-src = {version = "0.10.4", features=["static"]}

#blas = "0.22"
#openblas-src = {version = "0.10.4" }

#blas-src = { version = "0.8", features = ["intel-mkl"] }

#rust-blas="0.2.0"

[dev-dependencies]
tempfile = "3.1.0"
mockstream = "0.0.3"


[profile.release]
debug = true
#lto = 'fat'
#panic = 'abort'
#codegen-units=1

[profile.dev]
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
