[package]
name = "fw"
version = "0.2.0"
authors = ["Andraz Tori <atori@outbrain.com>"]
description = "Like Vowpal Wabbit, but meaner"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
# we need new version to enable static builds
fasthash = "0.4"
serde = {version = "1.0.114" , features = ["derive"]}
serde_json = "1.0.55"
clap = "2.33.1"
byteorder = "1.3.4"
merand48 = "0.1.0"
daemonize = "0.4.1"
lz4 = "1.23.2"
nom = "7"
dyn-clone = "1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
flate2 = { version = "1.0", features = ["cloudflare_zlib"], default-features = false }
shellwords = "1.1.0"
blas = "0.22"
intel-mkl-src = {version= "0.7.0", default-features = false, features=["download", "mkl-static-lp64-seq"]}
libm = "0.2.6"
[build-dependencies]
cbindgen = "0.23.0"

[lib]
crate_type = ["cdylib"]
doctest = false

[dev-dependencies]
tempfile = "3.1.0"
mockstream = "0.0.3"

[profile.release]
debug = false
lto = false
panic = 'abort'
codegen-units=1

[profile.dev]
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
