[package]
name = "fw"
version = "0.2.0"
authors = ["Andraz Tori <atori@outbrain.com>"]
description = "Like Vowpal Wabbit, but meaner"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2"
# we need new version to enable static builds
fasthash = "0.4"
serde = {version = "1.0.163" , features = ["derive"]}
serde_json = "1.0.96"
clap = "2.33.1"
byteorder = "1.4.3"
merand48 = "0.1.0"
daemonize = "0.5.0"
lz4 = "1.24.0"
nom = "7.1.3"
dyn-clone = "1.0.11"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
flate2 = { version = "1.0.26", features = ["zlib-ng"], default-features = false }
shellwords = "1.1.0"
blas = "0.22.0"
intel-mkl-src = {version= "0.8.1", default-features = false, features=["mkl-static-lp64-seq"]}
log = "0.4.18"
env_logger = "0.10.0"
rustc-hash = "1.1.0"

[build-dependencies]
cbindgen = "0.23.0"

[lib]
crate_type = ["cdylib"]
doctest = false

[dev-dependencies]
tempfile = "3.1.0"
mockstream = "0.0.3"

[profile.release]
debug = false
lto = false
panic = 'abort'
codegen-units=1

[profile.dev]
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
