[package]
name = "fw"
version = "0.1.0"
authors = ["Andraz Tori <atori@outbrain.com>"]
description = "Like Vowpal Wabbit, but meaner"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
fasthash = "0.4"
serde_json = "1.0.51"
fastapprox = "0.3.0"
clap = "2.33.0"
flate2 = "0.2"

