[package]
name = "fw"
version = "0.2.0"
authors = ["Andraz Tori <atori@outbrain.com>"]
description = "Like Vowpal Wabbit, but meaner"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
fasthash = "0.4"
serde = {version = "1.0.106" , features = ["derive"]}
serde_json = "1.0.51"
#fastapprox = "0.3.0"
clap = "2.33.0"
byteorder = "1.3.4"
#backtrace = "0.3.46"
triomphe = "0.1.1"
merand48 = "0.1.0"
daemonize = "0.4.1"


lz4 = "1.23.1"

# We'll use cloudflare's zlib as it is the fastest game in town
#flate2 = "1.0" #minz library
#flate2 = { version = "1.0", features = ["zlib"], default-features = false }
flate2 = { version = "1.0", features = ["cloudflare_zlib"], default-features = false }


